# openplay-rs

./: .gitignore  AGENTS.MD  CONTEXT.md  Cargo.toml  design.md  justfile  state.md
.opencode/plans/: rewrite_doudizhu.md
.opencode/skills/bits-ui/: SKILL.md
.opencode/skills/game-module-dev/: SKILL.md
client/: Cargo.toml  USER_IDENTITY.md
client/src/: auth.rs  connection.rs  identity.rs  lib.rs
games/doudizhu/: Cargo.toml  INSTRUCTION.md
games/doudizhu/src/: bot.rs  lib.rs  pattern.rs
games/doudizhu/tests/: game_logic.rs  integration.rs  service_integration.rs
games/holdem/: Cargo.toml  DESIGN.md  QUICKSTART.md  README.md
games/holdem/examples/: interactive_game.rs
games/holdem/src/: lib.rs
host/: Cargo.toml
host/src/: connection.rs  service.rs
models/basic/: Cargo.toml
models/basic/src/: ban.rs  cursor.rs  data.rs  game.rs  lib.rs  message.rs  player.rs  room.rs  user.rs
models/basic/src/player/: player_event.rs
models/basic/src/room/: room_event.rs  room_update.rs
models/basic/src/user/: game_action.rs  player_event.rs  room_action.rs
models/mahjong/: Cargo.toml
models/mahjong/src/: fmt.rs  lib.rs  unicode.rs
models/poker/: Cargo.toml
models/poker/src/: fmt.rs  lib.rs  unicode.rs
op-host/: Cargo.toml
op-host/src/: auth.rs  lib.rs  main.rs
op-tui/: Cargo.toml
op-tui/locales/en/: doudizhu.ftl  main.ftl
op-tui/locales/zh-CN/: doudizhu.ftl  main.ftl
op-tui/src/: app.rs  client.rs  config.rs  event.rs  i18n.rs  log_buffer.rs  main.rs  user_identity.rs
op-tui/src/ui/: doudizhu.rs  lobby.rs  log_panel.rs  mod.rs  user_manager.rs
openplay-host/: Cargo.toml
openplay-host/src/: connection.rs  service.rs
player-agents/http/: Cargo.toml
player-agents/programmed/: Cargo.toml
player-agents/programmed/src/: lib.rs
scripts/: download_godot.ps1  download_godot.sh
ui/: user_data.md
ui/bevy/: Cargo.toml
ui/bevy/src/: data.rs  game_components.rs  global_config.rs  lib.rs  main.rs  scenes.rs  state.rs  ui.rs
ui/bevy/src/game_components/: poker.rs
ui/bevy/src/global_config/: theme_manager.rs
ui/bevy/src/scenes/: connecting_room.rs  game_room.rs  lobby.rs  poker_preview.rs
ui/bevy/src/ui/: button.rs  general_hud.rs  poker_preview.rs
ui/godot/: CONSTRUCTION.md
ui/godot/project/: .gitignore  project.godot
ui/godot/project/addons/openplay_sdk/: openplay_sdk.gdextension
ui/godot/project/assets/: cardsLarge_tilemap.png.import  cardsMedium_tilemap.png.import  cardsSmall_tilemap.png.import
ui/godot/project/scenes/: Card.tscn  Game.tscn  GameRoom.tscn  Main.tscn  PlayerSeat.tscn  TableCenter.tscn
ui/godot/project/scenes/components/: Poker.tscn
ui/godot/project/scripts/: Card.gd  GameRoom.gd  PlayerSeat.gd  TableCenter.gd  UserSelect.gd  strings.gd
ui/godot/project/scripts/resources/: PokerTheme.gd
ui/godot/rust_ext/: Cargo.toml
ui/godot/rust_ext/src/: lib.rs
ui/tauvy/: .prettierrc  bunfig.toml  package.json  vite.config.js
ui/tauvy/src/: app.css  app.html
ui/tauvy/src-tauri/: Cargo.toml  tauri.conf.json
ui/tauvy/src-tauri/src/: main.rs
ui/tauvy/src/lib/components/: scene-preview.svelte
ui/tauvy/src/routes/: +layout.svelte  +page.svelte
user-agents/http/: Cargo.toml
user-agents/http/src/: lib.rs
user-agents/programmed/: Cargo.toml
user-agents/programmed/src/: lib.rs
