[workspace]
resolver = "2"
members = [
    "games/*",
    "models/*",
    "host",
    "user-agents/*",
    "client",
    "op-host",
    "op-tui",
    "ui/godot/rust_ext",
]

[workspace.metadata]


[workspace.dependencies]
rand = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
openplay-basic = { path = "models/basic" }
