[package]
name = "op-host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "1.0"
headers = "0.4"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
futures = "0.3"
# Internal
openplay-basic = { path = "../models/basic" }
openplay-host = { path = "../host" }
openplay-ua-http = { path = "../user-agents/http" }
openplay-doudizhu = { path = "../games/doudizhu" }
bytes = "1.11.1"
config = "0.15.19"

[dev-dependencies]
openplay-ua-programmed = { path = "../user-agents/programmed" }
