[package]
name = "op-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "op-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI / Config
clap = { version = "4", features = ["derive"] }
config = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# i18n (Fluent)
fluent = "0.17"
fluent-langneg = "0.13"
unic-langid = "0.9"
sys-locale = "0.3"

# Internal
openplay-basic = { path = "../models/basic" }
openplay-doudizhu = { path = "../games/doudizhu" }
openplay-poker = { path = "../models/poker" }
openplay-client = { path = "../client" }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
chrono = "0.4"
anyhow = "1"
bytes = "1"
