[package]
name = "openplay-doudizhu"
version = "0.1.0"
edition = "2021"

[dependencies]
openplay-basic = { path = "../../models/basic" }
openplay-poker = { path = "../../models/poker" }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
openplay-host = { path = "../../host" }
openplay-ua-programmed = { path = "../../user-agents/programmed" }
tracing = "0.1"
tracing-subscriber = "0.3"
