[package]
name = "openplay-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1", features = ["serde"] }
serde = { workspace = true }
thiserror = { version = "2" }
futures-util = { version = "0.3" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22" }