[package]
name = "op-bevy"
version = "0.1.0"
edition = "2024"



[dependencies]
bevy = { version = "0.18", features = ["webgl2", "debug"] }
bevy_asset_loader = { version= "0.25", features = ["2d", "3d"]}
bevy_ui_text_input = "0.7"

openplay-poker = { workspace = true, default-features = false }
openplay-client = { workspace = true }
openplay-basic  = { workspace = true }
wasm-bindgen = "0.2"